<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MitraQSR</string>
    <string name="title_section1">Create Ticket</string>
    <string name="title_section2">Replay Ticket</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="error">Android application error!</string>
    <string name="connection_error">Please check your internet connection!</string>
    
    <string-array name="ticket_prority">
        <item>low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    
    
    <string-array name="ticket_status">
        <item>Close </item>
        <item>Open</item>
    </string-array>
    
    
    
    <!-- Ui Modifiction related strings -->
<string name="store_display_text">Store :</string>
<string name="ticket_id_text">Ticket Id</string>
<string name="colon_display_text">:</string>
<string name="ticket_id_display_text">101</string>
<string name="department_static_text">Department </string>
<string name="department_display_text">Operations </string>
<string name="title_static_text">Title </string>
<string name="title_display_text">Others </string>
<string name="store_static_text">Store </string>
<string name="ticket_priority_static_text">Ticket priority </string>
<string name="assignTo_static_text">Assigned To</string>
<string name="status_static_text">Status</string>
<string name="empty_view_text">EmptySpaceEmptySpa</string>
<string name="transaction_id">101</string>
<string name="store_name_text">Store name</string>
<string name="ticket_message_text">Ticket message </string>
<string name="cancel_button_text">Cancel</string>
<string name="create_ticket_text">Create ticket</string>
<string name="create_ticket_payroll_text">Create Ticket for Payroll</string>
<string name="reply_ticket_box_text">IT</string>
<string name="created_by_text">Created by :</string>
<string name="description_static_text">This is Descrption</string>
<string name="reply_title_display_text"> - Reply Title</string>
<string name="reply_count_display_text">Count</string>
<string name="date_display_text">Sep 23</string>
<string name="user_name_display_text">User</string>
<string name="img_content_descirption_text">Content Description</string>

<!-- URL for QSR  -->
<string name="url">http://73.166.145.211:808/MitraQSRAPI/MitraQSRService.svc?wsdl</string>

</resources>
