<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reply_color" >

    <TextView
        android:id="@+id/main_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/leavedet_txt_ht1"
        android:background="@color/blue_main"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:text="@string/create_ticket_payroll_text"
        android:textColor="@color/white_text"
        android:textSize="@dimen/heading"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_btnn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/backbutton_48x48_in20x20" />

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_img"
        android:layout_margin="10dp"
        android:background="@drawable/abc_menu_dropdown_panel_holo_light"
        android:orientation="horizontal"
        android:padding="15dp" >

        
              <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:singleLine="true"
            android:text="@string/store_name_text"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        
        <TextView
            android:id="@+id/tic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_below="@id/store_name"
            android:text="@string/transaction_id"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

  
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/depart_desc_replay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white_text"
            android:gravity="center_vertical"
            android:hint="@string/ticket_message_text"
            android:maxLines="5"
            android:minHeight="100dp"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/depart_desc_replay"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/marg_lt"
            android:layout_marginRight="@dimen/marg_lt"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_corner_maroon_shape"
            android:text="@string/cancel_button_text"
            android:textColor="@color/white_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reply_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/depart_desc_replay"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/marg_lt"
            android:layout_marginRight="@dimen/marg_lt"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_corner_maroon_shape"
            android:text="@string/create_ticket_text"
            android:textColor="@color/white_text"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>